tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_errors_on_if_without_else_type_mismatch/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type Field, found type ()
  ┌─ src/main.nr:4:13
  │
4 │             1
  │             -
  │
  = Are you missing a semicolon at the end of the first block of this 'if'?

Aborting due to 1 previous error
