tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_errors_on_if_without_else_type_mismatch/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type Field, found type ()
  ┌─ src/main.nr:4:13
  │
4 │             1
  │             -
  │
  = Are you missing a semicolon at the end of the first block of this 'if'?

Aborting due to 1 previous error
